@@ -458,30 +458,25 @@ module-qualified names."
                #'(lambda () (interactive) (beep))))
            (where-is-internal 'self-insert-command)))
 
-(defvar py-auto-fill-mode-orig (auto-fill-mode)
-  "Store the original state of auto-fill-mode. ")
-
-;; py-fill-column-orig  already defined
-(defun py-comment-auto-fill (&optional arg)
+(defun py-toggle-comment-auto-fill (&optional arg)
   "Toggles comment-auto-fill mode"
   (interactive "P")
-  (if (or (and arg (< 0 (prefix-numeric-value arg))) (and (boundp 'py-comment-auto-fill)(not py-comment-auto-fill)))
+  (if (or (and arg (< 0 (prefix-numeric-value arg)))
+	  (and (boundp 'py-comment-auto-fill-p)(not py-comment-auto-fill-p)))
       (progn
         (set (make-local-variable 'py-comment-auto-fill-p) t)
         (setq fill-column py-comment-fill-column)
         (auto-fill-mode 1))
     (set (make-local-variable 'py-comment-auto-fill-p) nil)
-;;    (set (make-local-variable 'py-comment-auto-fill-only-comments) nil)
-    ;; (setq fill-column fill-column-orig)
     (auto-fill-mode -1)))
 
 (defun py-comment-auto-fill-on ()
   (interactive)
-  (py-comment-auto-fill 1))
+  (py-toggle-comment-auto-fill 1))
 
 (defun py-comment-auto-fill-off ()
   (interactive)
-  (py-comment-auto-fill -1))
+  (py-toggle-comment-auto-fill -1))
 
 (defun py--set-auto-fill-values ()
   "Internal use by `py--run-auto-fill-timer'"
@@ -489,7 +484,7 @@ module-qualified names."
     (cond ((and (nth 4 pps)(numberp py-comment-fill-column))
            (setq fill-column py-comment-fill-column))
           ((and (nth 3 pps)(numberp py-docstring-fill-column))
-           (set (make-local-variable 'fill-column) py-docstring-fill-column))
+           (setq fill-column py-docstring-fill-column))
           (t (setq fill-column py-fill-column-orig)))))
 
 (defun py--run-auto-fill-timer ()
